<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fragment_smslogin_phone"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/login_hit_phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fragment_smslogin_code"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:hint="@string/login_hit_smscode" />

        <Button
            android:id="@+id/fragment_smslogin_getcode"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/login_get_smscode" />
    </LinearLayout>

    <Button
        android:id="@+id/fragment_smslogin_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_login"/>

</LinearLayout>