<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fragment_registe_phone"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/login_hit_phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fragment_registe_code"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="2"
            android:hint="@string/login_hit_code" />

        <ImageView
            android:id="@+id/fragment_registe_imagecode"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/fragment_registe_next"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_next" />

</LinearLayout>