<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fragment_login_account"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/login_hit_account" />

    <EditText
        android:id="@+id/fragment_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/login_hit_pwd" />

    <LinearLayout
        android:id="@+id/fragment_login_autoCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/fragment_login_autoCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="请输入验证码"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="6" />

        <ImageView
            android:id="@+id/fragment_login_imageViewAutoCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/activity_login_autoCode"
            android:layout_weight="2" />
    </LinearLayout>

    <Button
        android:id="@+id/fragment_login_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_login" />
</LinearLayout>